# nemo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  SECURITY.md  build-images.sh  how-to-spec.md  nemo.toml  op.env
.agent/: audit-feedback-round-1.json  audit-feedback-round-2.json  audit-feedback-round-3.json  audit-feedback-round-4.json  audit-feedback-round-5.json  review-feedback-round-1.json  review-feedback-round-1.md  review-feedback-round-10.json  review-feedback-round-10.md  review-feedback-round-11.json  review-feedback-round-11.md  review-feedback-round-12.json  review-feedback-round-12.md  review-feedback-round-13.json  review-feedback-round-13.md  review-feedback-round-14.json  review-feedback-round-14.md  review-feedback-round-15.md  review-feedback-round-16.md  review-feedback-round-17.md  review-feedback-round-18.md  review-feedback-round-19.md  review-feedback-round-2.json  review-feedback-round-2.md  review-feedback-round-20.md  review-feedback-round-21.md  review-feedback-round-22.md  review-feedback-round-23.md  review-feedback-round-24.md  review-feedback-round-25.md  review-feedback-round-26.md  review-feedback-round-27.md  review-feedback-round-3.json  review-feedback-round-3.md  review-feedback-round-4.json  review-feedback-round-4.md  review-feedback-round-5.json  review-feedback-round-5.md  review-feedback-round-6.json  review-feedback-round-6.md  (+12 more)
.claude/: CLAUDE.md  learnings.md
cli/: Cargo.toml
cli/src/: api_types.rs  claude_creds.rs  client.rs  config.rs  main.rs  preflight.rs  project_config.rs
cli/src/commands/: approve.rs  auth.rs  cache.rs  cancel.rs  capabilities.rs  config.rs  error_hints.rs  extend.rs  helm.rs  help_ai.md  help_ai.rs  init.rs  inspect.rs  logs.rs  mod.rs  models.rs  profile.rs  ps.rs  resume.rs  start.rs  status.rs
cli/src/commands/helm/: actions.rs  cost.rs  diff_pane.rs  mod.rs  multi_view.rs  rounds_table.rs  summary.rs  themes.rs
cli/src/config/: mod.rs  repo_toml.rs
cli/tests/: per_repo_config.rs  profiles.rs
control-plane/: Cargo.toml  build.rs
control-plane/assets/: dashboard.css  dashboard.js
control-plane/migrations/: 20260328000001_initial_schema.sql  20260409000001_add_failed_from_state.sql  20260410000001_typed_session_ids.sql  20260417000001_add_judge_decisions.sql  20260417000001_add_pod_snapshots.sql  20260418000001_add_judge_decisions.sql  20260424000001_add_stage_timeout_override.sql  20260424000002_add_per_stage_timeout_overrides.sql  20260424000003_add_cache_env_overrides.sql  20260424000004_add_last_activity_at.sql
control-plane/src/: error.rs  lib.rs  main.rs  util.rs
control-plane/src/api/: auth.rs  cache.rs  handlers.rs  introspect.rs  mod.rs  sse.rs
control-plane/src/api/dashboard/: aggregate.rs  auth.rs  handlers.rs  mod.rs  render.rs  templates.rs
control-plane/src/config/: cluster.rs  merged.rs  mod.rs  repo.rs
control-plane/src/git/: bare_repo.rs  mod.rs
control-plane/src/k8s/: client.rs  job_builder.rs  mod.rs
control-plane/src/loop_engine/: driver.rs  judge.rs  mod.rs  reconciler.rs  watcher.rs
control-plane/src/state/: mod.rs  postgres.rs
control-plane/src/types/: api.rs  mod.rs  verdict.rs
control-plane/tests/: dashboard_integration.rs  judge_integration.rs  judge_sidecar.rs
dev/: README.md  build.sh  setup.sh  smoke-test.sh  teardown.sh  test-spec.md
docs/: architecture-diagrams.md  architecture.md  convergence-learnings.md  dashboard-setup.md  deploy.md  design.md  local-dev-quickstart.md
sidecar/: Cargo.toml  Dockerfile  deny.toml
sidecar/scripts/: lint-no-test-utils-in-prod.sh
sidecar/src/: egress.rs  git_ssh_proxy.rs  git_url.rs  health.rs  lib.rs  logging.rs  main.rs  model_proxy.rs  shutdown.rs  ssrf.rs  ssrf_connector.rs  tls.rs
sidecar/tests/: git_ssh_proxy_e2e.rs  model_proxy_e2e.rs
sidecar/tests/parity/: Cargo.toml  README.md
sidecar/tests/parity/corpus/: anthropic_bare_prefix.json  anthropic_client_api_key_overwritten.json  anthropic_client_version_passthrough.json  anthropic_post_v1_messages_nonstream.json  divergence_bare_exec_receive_pack_rejection.json  divergence_bare_exec_upload_pack_rejection.json  divergence_connect_drain_on_sigterm.json  divergence_sse_streaming_anthropic.json  divergence_sse_streaming_openai.json  egress_connect_egress_target.json  egress_connect_egress_target_no_port.json  egress_dns_error_both_fail_502.json  egress_http_get_example.json  egress_http_get_example_with_port.json  egress_http_no_redirect_follow.json  egress_http_origin_form_repair.json  egress_http_strips_proxy_connection.json  healthz_head_method_parity.json  healthz_post_ready_returns_200.json  openai_bare_prefix.json  openai_client_auth_header_overwritten.json  openai_credential_refresh_per_request.json  openai_get_v1_models.json  openai_post_chat_completions_nonstream.json  ssh_receive_pack_matching_repo.json  ssh_rejects_env_request.json  ssh_rejects_non_git_exec.json  ssh_upload_pack_matching_repo.json  ssh_wrong_repo_path_rejected_locally.json  unknown_route_returns_403.json
sidecar/tests/parity/fixtures/: regenerate-ssh-fixtures.py
sidecar/tests/parity/fixtures/go-secrets/: README.md
sidecar/tests/parity/fixtures/go-secrets/model-credentials/: anthropic
sidecar/tests/parity/fixtures/go-secrets/ssh-key/: id_ed25519.pub
sidecar/tests/parity/fixtures/mock-github-ssh/: host_key  host_key.pub
sidecar/tests/parity/fixtures/rust-secrets/: README.md
sidecar/tests/parity/fixtures/rust-secrets/model-credentials/: openai
sidecar/tests/parity/fixtures/rust-secrets/ssh-key/: id_ed25519
sidecar/tests/parity/fixtures/rust-secrets/ssh-known-hosts/: known_hosts
sidecar/tests/parity/fixtures/test-ca/: README.md  regenerate-test-ca.sh
sidecar/tests/parity/src/: args.rs  compose.rs  corpus.rs  diff.rs  health_probe.rs  introspection.rs  main.rs  normalize.rs  report.rs  result.rs  subnet.rs  tls_client.rs
sidecar/tests/parity/src/runner/: divergence_drain.rs  egress.rs  git_ssh.rs  health.rs  mod.rs  model_proxy.rs
specs/: dashboard-contrast-theme-toggle.md  dashboard-persist-auth.md  helm-tui-phase2.md  (+28 more)
(+66 files in other folders)
