[workspace]
resolver = "2"
members = ["control-plane", "cli", "sidecar"]

[workspace.package]
version = "0.7.14"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Kubernetes
kube = { version = "0.98", features = ["runtime", "client", "derive", "ws"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }

# HTTP types (shared by axum + kube)
http = "1"

# HTTP server
axum = { version = "0.8", features = ["json"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
toml = "0.8"
async-trait = "0.1"
async-stream = "0.3"
maud = "0.26"

# Release profile — tuned for the sidecar binary per specs/rust-sidecar.md.
#
# `panic = "unwind"` is required (not "abort") so that tokio task panics in
# the sidecar's request handlers can be caught at the task boundary rather
# than terminating the whole process. It is the cargo default for release
# but we set it explicitly to make the requirement visible.
#
# `lto = "fat"` and `strip = true` apply workspace-wide because cargo does
# not allow per-package overrides for those settings. The control-plane
# and cli binaries get the same treatment; their stripped release binaries
# are also how they ship.
#
# `opt-level` and `codegen-units` are overridden per-package for the
# sidecar below so we hit NFR-2's 25 MB ceiling without regressing
# control-plane performance.
[profile.release]
lto = "fat"
strip = true
panic = "unwind"

[profile.release.package.nautiloop-sidecar]
opt-level = "z"
codegen-units = 1
