[package]
name = "nemo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nemo"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
reqwest.workspace = true
clap.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
toml.workspace = true
urlencoding = "2"
crossterm = "0.28"
ratatui = "0.29"

[dev-dependencies]
tempfile = "3"
