[package]
name = "nemo-control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nemo-server"
path = "src/main.rs"

[lib]
name = "nemo_control_plane"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sqlx.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true
hex.workspace = true
futures.workspace = true
toml.workspace = true
async-trait.workspace = true
async-stream.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
