[package]
name = "nautiloop-sidecar-parity-harness"
version = "0.1.0"
edition = "2024"
publish = false
description = "Containerized parity test harness for the Nautiloop auth sidecar (Go vs Rust)"
license.workspace = true

[[bin]]
name = "nautiloop-sidecar-parity-harness"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "time",
    "process",
    "sync",
    "signal",
    "fs",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls-manual-roots",
    "stream",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
russh = { version = "0.60", default-features = false, features = ["ring"] }
tracing = "0.1"
tracing-subscriber = { version = ">=0.3.20", features = ["fmt", "env-filter"] }
rustls-pemfile = "2"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"
ipnet = "2"
futures = "0.3"
bytes = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hyper = { version = "1.4", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
http-body-util = "0.1"
http = "1"

[dev-dependencies]
tempfile = "3"
